--- a/TIL/Lv22.md
+++ b/TIL/Lv22.md
@@ -67,54 +67,131 @@ protected:
 void AEomcriCharacter::SetupPlayerInputComponent(UInputComponent* PlayerInputComponent)
 {
     Super::SetupPlayerInputComponent(PlayerInputComponent);
-    
-    // 이동 및 점프 입력 바인딩
-    PlayerInputComponent->BindAxis("MoveForward", this, &AEomcriCharacter::MoveForward);
-    PlayerInputComponent->BindAction("Jump", IE_Pressed, this, &ACharacter::Jump);
-}
 
-void AEomcriCharacter::MoveForward(float Value)
-{
-    if (Controller && Value != 0.0f)
+    // Enhanced InputComponent로 캐스팅
+    if (UEnhancedInputComponent* EnhancedInput = Cast<UEnhancedInputComponent>(PlayerInputComponent))
     {
-        AddMovementInput(GetActorForwardVector(), Value);
+        // IA를 가져오기 위해 현재 소유 중인 Controller를 ASpartaPlayerController로 캐스팅
+        if (AEomcriPlayerController* PlayerController = Cast<AEomcriPlayerController>(GetController()))
+        {
+            if (PlayerController->MoveAction)
+            {
+                // IA_Move 액션 키를 "키를 누르고 있는 동안" Move() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->MoveAction,
+                    ETriggerEvent::Triggered,
+                    this,
+                    &AEomcriCharacter::Move
+                );
+            }
+
+            if (PlayerController->JumpAction)
+            {
+                // IA_Jump 액션 키를 "키를 누르고 있는 동안" StartJump() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->JumpAction,
+                    ETriggerEvent::Triggered,
+                    this,
+                    &AEomcriCharacter::StartJump
+                );
+
+                // IA_Jump 액션 키에서 "손을 뗀 순간" StopJump() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->JumpAction,
+                    ETriggerEvent::Completed,
+                    this,
+                    &AEomcriCharacter::StopJump
+                );
+            }
+
+            if (PlayerController->LookAction)
+            {
+                // IA_Look 액션 마우스가 "움직일 때" Look() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->LookAction,
+                    ETriggerEvent::Triggered,
+                    this,
+                    &AEomcriCharacter::Look
+                );
+            }
+
+            if (PlayerController->SprintAction)
+            {
+                // IA_Sprint 액션 키를 "누르고 있는 동안" StartSprint() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->SprintAction,
+                    ETriggerEvent::Triggered,
+                    this,
+                    &AEomcriCharacter::StartSprint
+                );
+                // IA_Sprint 액션 키에서 "손을 뗀 순간" StopSprint() 호출
+                EnhancedInput->BindAction(
+                    PlayerController->SprintAction,
+                    ETriggerEvent::Completed,
+                    this,
+                    &AEomcriCharacter::StopSprint
+                );
+            }
+        }
     }
 }
 ```
 
-## 5. PlayerController를 통한 실제 움직임 구현
-### EomcriPlayerController 클래스 생성
-- PlayerController는 입력을 받아 캐릭터의 동작을 직접 제어하는 역할을 담당함.
+## 5. 움직임 별 함수 구현
 
 #### 코드 예시
 ```cpp
-// EomcriPlayerController.h
-#include "CoreMinimal.h"
-#include "GameFramework/PlayerController.h"
-#include "EomcriPlayerController.generated.h"
 
-UCLASS()
-class EOMCRI_API AEomcriPlayerController : public APlayerController
+void AEomcriCharacter::Move(const FInputActionValue & value)
 {
-    GENERATED_BODY()
+    // 컨트롤러가 있어야 방향 계산이 가능
+    if (!Controller) return;
 
-protected:
-    virtual void SetupInputComponent() override;
-};
+    // Value는 Axis2D로 설정된 IA_Move의 입력값 (WASD)을 담고 있음
+// 예) (X=1, Y=0) → 전진 / (X=-1, Y=0) → 후진 / (X=0, Y=1) → 오른쪽 / (X=0, Y=-1) → 왼쪽
+    const FVector2D MoveInput = value.Get<FVector2D>();
 
-// EomcriPlayerController.cpp
-void AEomcriPlayerController::SetupInputComponent()
-{
-    Super::SetupInputComponent();
+    if (!FMath::IsNearlyZero(MoveInput.X))
+    {
+        // 캐릭터가 바라보는 방향(정면)으로 X축 이동
+        AddMovementInput(GetActorForwardVector(), MoveInput.X);
+    }
 
-    // 입력 처리 예시
-    InputComponent->BindAxis("Turn", this, &AEomcriPlayerController::AddYawInput);
-    InputComponent->BindAction("Sprint", IE_Pressed, this, &AEomcriPlayerController::StartSprinting);
+    if (!FMath::IsNearlyZero(MoveInput.Y))
+    {
+        // 캐릭터의 오른쪽 방향으로 Y축 이동
+        AddMovementInput(GetActorRightVector(), MoveInput.Y);
+    }
 }
 
-void AEomcriPlayerController::StartSprinting()
+void AEomcriCharacter::StartJump(const FInputActionValue & value)
 {
-    UE_LOG(LogTemp, Warning, TEXT("Sprint 시작"));
+    // Jump 함수는 Character가 기본 제공
+    if (value.Get<bool>())
+    {
+        Jump();
+    }
+}
+
+void AEomcriCharacter::StopJump(const FInputActionValue & value)
+{
+    // StopJumping 함수도 Character가 기본 제공
+    if (!value.Get<bool>())
+    {
+        StopJumping();
+    }
+}
+
+void AEomcriCharacter::Look(const FInputActionValue & value)
+{
+    // 마우스의 X, Y 움직임을 2D 축으로 가져옴
+    FVector2D LookInput = value.Get<FVector2D>();
+
+    // X는 좌우 회전 (Yaw), Y는 상하 회전 (Pitch)
+    // 좌우 회전
+    AddControllerYawInput(LookInput.X);
+    // 상하 회전
+    AddControllerPitchInput(LookInput.Y);
 }
 ```
 
